# xxh

./: README.md  dune-project  flake.nix  xxh.opam
bench/: bench.ml  dune  runner.sh  xxh_bench.ml
src/: dune
test/: dune  xxh_tests.ml
